[+] Frontend : Text CSS updated.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,10 +21,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>React App</title>
-  <link href="https://fonts.googleapis.com/css?family=Monoton|Roboto+Mono" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Monoton|Noto+Sans+KR" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css"
     integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR" rel="stylesheet">
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js'></script>
 </head>
 
